<?xml version="1.0" encoding="utf-8"?>
<!-- de menu voor menu_toolbar met notificatie bel, zoeken en extra opties -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- notificaties -->
    <item
            android:id="@+id/nav_notifications"
            android:title="@string/ab_notifications"
            android:icon="@drawable/ic_notifications_white_24dp"
            app:actionLayout="@layout/partial_notification_bell"
            app:showAsAction="ifRoom"/>

    <!-- grote lijstweergave -->
    <item
            android:id="@+id/ab_options_small"
            android:title="@string/ab_options_list_design_small"
            app:showAsAction="never"/>

    <!-- kleine lijst weergave -->
    <item
            android:id="@+id/ab_options_big"
            android:title="@string/ab_options_list_design_big"
            app:showAsAction="never"/>

</menu>