<?xml version="1.0" encoding="utf-8"?>
<!-- A fragment to change your password -->
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="Autofill"
>

    <!-- Virtual divider vertical 10% -->
    <android.support.constraint.Guideline
            android:id="@+id/guideline_change_password_10percent_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
    />

    <!-- Virtual divider vertical 90% -->
    <android.support.constraint.Guideline
            android:id="@+id/guideline_change_password_90percent_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
    />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_change_password_10percent_vertical"
            app:layout_constraintEnd_toEndOf="@id/guideline_change_password_90percent_vertical"
    >

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- Titel -->
            <TextView
                    android:id="@+id/txt_change_password_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/txt_change_password"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textAlignment="center"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <!-- Nieuw wachtwoord -->
            <EditText
                    android:id="@+id/txt_change_password_new_password"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:hint="@string/placeholder_new_password"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_title"

                    android:layout_marginTop="12dp"
            />

            <!-- Bevestig wachtwoord -->
            <EditText
                    android:id="@+id/txt_change_password_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:hint="@string/placeholder_confirm_password"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_new_password"

                    android:layout_marginTop="8dp"
            />

            <!-- wijzig wachtwoord bevestig knop -->
            <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/btn_change_password"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_change_password_confirm_password"

                    android:layout_marginTop="12dp"
            />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>