<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment met generieke errortekst en optie voor het tonen van cached meetings -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View"/>

        <variable
                name="isVisible"
                type="boolean"/>

    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isVisible}"
    >

        <!-- Virtual divider horizontal 50% -->
        <android.support.constraint.Guideline
                android:id="@+id/guideline_partial_error_with_show_cache_50percent_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
        />

        <!-- Virtual divider vertical 10% -->
        <android.support.constraint.Guideline
                android:id="@+id/guideline_partial_error_with_show_cache_10percent_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10"
        />

        <!-- Virtual divider vertical 90% -->
        <android.support.constraint.Guideline
                android:id="@+id/guideline_partial_error_with_show_cache_90percent_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90"
        />

        <!-- Logo -->
        <ImageView
                android:id="@+id/img_partial_error_with_show_cache_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintDimensionRatio="WH,550:163"
                android:scaleType="fitCenter"
                android:src="@drawable/img_logo"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/alt_logo"

                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_error_with_show_cache_90percent_vertical"
                app:layout_constraintStart_toStartOf="@+id/guideline_partial_error_with_show_cache_10percent_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline_partial_error_with_show_cache_50percent_horizontal"
        />

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_error_with_show_cache_90percent_vertical"
                app:layout_constraintStart_toStartOf="@+id/guideline_partial_error_with_show_cache_10percent_vertical"
                app:layout_constraintTop_toBottomOf="@id/guideline_partial_error_with_show_cache_50percent_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
        >

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingBottom="10dp"
            >


                <!-- error bericht -->
                <TextView
                        android:id="@+id/text_partial_error_with_show_cache_error"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:text="@string/btn_partial_error_with_show_cache_error_message"
                        android:textSize="24sp"
                        android:textAlignment="center"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <!-- toon cached meetings -->
                <Button
                        android:id="@+id/btn_partial_error_with_show_cache_show_cache"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:text="@string/btn_partial_error_with_show_cache_show_cache"

                        app:layout_constraintTop_toBottomOf="@+id/text_partial_error_with_show_cache_error"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        android:layout_marginTop="12dp"
                />

                <!-- probier opnieuw -->
                <Button
                        android:id="@+id/btn_partial_error_with_show_cache_try_again"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:text="@string/btn_partial_error_with_show_cache_try_again"
                        android:background="@color/lightGrey"
                        android:textColor="@android:color/black"

                        app:layout_constraintTop_toBottomOf="@+id/btn_partial_error_with_show_cache_show_cache"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        android:layout_marginTop="12dp"
                />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>